--- a/style.css
+++ b/style.css
@@ -158,6 +158,18 @@ img {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+#update-modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
 #modal-content {
   background-color: #fefefe;
   margin: 4% auto;
@@ -165,7 +177,15 @@ img {
   max-width: 350px;
 }
 
-#close {
+#update-modal-content {
+  background-color: #fefefe;
+  margin: 4% auto;
+  border: 1px solid #888888;
+  max-width: 350px;
+}
+
+#close,
+#close-update-modal {
   width: 34px;
   font-size: 22px;
   border-radius: 100px;
@@ -176,11 +196,13 @@ img {
   margin: -13px -13px 0px 0px;
 }
 
-#close:hover {
+#close:hover,
+#close-update-modal:hover {
   box-shadow: 0 2px #93b8cf;
 }
 
-#close:active {
+#close:active,
+#close-update-modal:active {
   box-shadow: 0 0 #93b8cf;
 }
 
@@ -355,11 +377,38 @@ input:focus {
   margin: 0 auto 20px;
 }
 
+.update-post-form {
+  margin: 10px;
+}
+
+form#update-post-form {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+form#update-post-form label {
+  margin-top: 20px;
+}
+
+form#update-post-form textarea {
+  /* width: inherit; */
+  height: 150px;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 3px;
+  border: solid 1px;
+}
+
 form#create-post-form input {
   margin-bottom: 20px;
 }
 
 form#create-post-form button {
+  margin-top: 30px;
+}
+
+form#update-post-form button {
   margin-top: 30px;
 }
 
